--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@
 *.slo
 *.lo
 *.o
-*.obj
 
 # Precompiled Headers
 *.gch
@@ -33,8 +32,15 @@
 
 # folders
 build/
-cmake-build-debug/
+raisim/build
+raisimGymTorch/build
+raisimGymTorch/raisim_gym_torch.egg-info
+raisim/cmake-build-debug/
 .idea/
 
-# activation key
+# other files
 rsc/activation.raisim
+raisimUnity.x86_64
+
+
+
