--- a/raisim/CMakeLists.txt
+++ b/raisim/CMakeLists.txt
@@ -15,3 +15,7 @@ file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/../rsc" DESTINATION ${CMAKE_BINARY_DIR})
 add_executable(spawn_quadcopter src/spawn_quadcopter.cpp)
 target_link_libraries(spawn_quadcopter PUBLIC raisim::raisim pthread)
 target_include_directories(spawn_quadcopter PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+
+add_executable(gyroscope_effect src/gyroscopic_effect.cpp)
+target_link_libraries(gyroscope_effect PUBLIC raisim::raisim pthread)
+target_include_directories(gyroscope_effect PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
