--- a/raisimGymTorch/environments/rsg_quadcopter_imitation/cfg.yaml
+++ b/raisimGymTorch/environments/rsg_quadcopter_imitation/cfg.yaml
@@ -3,12 +3,14 @@ record_video: yes
 
 environment:
   render: True
-  num_envs: 48
+  num_envs: 96
   eval_every_n: 20
-  num_threads: 20
+  num_threads: 30
   simulation_dt: 0.0025
   control_dt: 0.01
-  max_time: 12.0
+  max_time: 11.0
+  normalize_ob: True
+  log_prob_loss: True
   reward:
     position:
       coeff: -0.002
@@ -23,3 +25,4 @@ environment:
 architecture:
   policy_net: [64, 64]
   value_net: [64, 64]
+  activation_fn: nn.LeakyReLU
