--- a/raisimGymTorch/environments/rsg_quadcopter_imitation/cfg.yaml
+++ b/raisimGymTorch/environments/rsg_quadcopter_imitation/cfg.yaml
@@ -9,8 +9,8 @@ environment:
   simulation_dt: 0.0025
   control_dt: 0.01
   max_time: 11.0
-  normalize_ob: False
-  log_prob_loss: True
+  normalize_ob: True
+  log_prob_loss: False
   reward:
     position:
       coeff: -0.002
