deterministic policy implemented in both ppo and DAgger, selectable via cfg file

--- a/raisimGymTorch/environments/quadcopter_imitation/cfg.yaml
+++ b/raisimGymTorch/environments/quadcopter_imitation/cfg.yaml
@@ -28,7 +28,7 @@ architecture:
   policy_net: [64, 64]
   value_net: [64, 64]
   activation_fn: nn.LeakyReLU
-  deterministic_policy: False
+  deterministic_policy: True
 
 
 hyperparam:
