--- a/raisimGymTorch/environments/quadcopter_reinforcement/cfg.yaml
+++ b/raisimGymTorch/environments/quadcopter_reinforcement/cfg.yaml
@@ -16,13 +16,13 @@ environment:
     position:
       coeff: -0.002
     relPosition:
-      coeff: 0.004
+      coeff: 0.002
     thrust:
-      coeff: 0.0001
+      coeff: 0.000 # maybe not a good choice
     orientation:
       coeff: -0.002
     angularVelocity:
-      coeff: -0.0001
+      coeff: -0.000 # maybe not a good choice for
 
 
 architecture:
@@ -41,8 +41,9 @@ hyperparam:
   num_mini_batches: 20
   num_learning_epochs: 6
   shuffle: False
-  Gamma: 0.99
+  Gamma: 0.995
   Lambda: 0.95
+  clip_param: 0.3
   learning_rate: 0.0005
   value_loss_coef: 0.5
   use_clipped_value_loss: True # if True: PPO2, False: PPO
