--- a/raisimGymTorch/environments/itm_quadcopter/dagger_cfg.yaml
+++ b/raisimGymTorch/environments/itm_quadcopter/dagger_cfg.yaml
@@ -26,8 +26,10 @@ environment:
 
 
 architecture:
-  policy_net: [128, 128]
-  value_net: [128, 128]
+  shared_nets: True
+  base_net: [128]
+  policy_net: [64]
+  value_net: [64]
   activation_fn: nn.LeakyReLU
   deterministic_policy: False # if True: does not converge, because action loss will be used instead of log prob action loss
                               # False: loss = -logProb
