--- a/raisimGymTorch/environments/itm_quadcopter/pid_cfg.yaml
+++ b/raisimGymTorch/environments/itm_quadcopter/pid_cfg.yaml
@@ -4,48 +4,54 @@ record_video: yes
 environment:
   simulation_dt: 0.002
   control_dt: 0.01
-  max_time: 13.0
+  max_time: 16.0
   render: True
 
-  num_envs: 1
+  num_envs: 96
   eval_every_n: 20
   visualize_eval: True
-  num_threads: 40
+  num_threads: 30
 
   reward:
     position:
       coeff: -0.002
     relPosition:
-      coeff: 0.004
+      coeff: 0.002
     thrust:
-      coeff: 0.0001
+      coeff: 0.0
     orientation:
-      coeff: -0.002
+      coeff: 0.0
     angularVelocity:
-      coeff: -0.0001
+      coeff: 0.0
 
 
 architecture:
+  shared_nets: False
+  base_net: [64]
   policy_net: [64, 64]
   value_net: [64, 64]
   activation_fn: nn.LeakyReLU
-  deterministic_policy: False
+  deterministic_policy: False # if True: does not converge, because action loss will be used instead of log prob action loss
+  # False: loss = -logProb
 
 helper:
-  normalize_ob: False
-  update_mean: True
+  normalize_ob: Flase # might make no sense in this task
+  update_mean: False
   scale_action: False # because scaling is done in Environment.hpp for better performance
   clip_action: False # either scale or clip action to [-1, 1]. Also works fine.
 
-hyperparam:
-  num_mini_batches: 20
-  num_learning_epochs: 6
-  shuffle: False
-  Gamma: 0.99
-  Lambda: 0.95
-  learning_rate: 0.0005
-  value_loss_coef: 0.5
-  use_clipped_value_loss: True # if True: PPO2, False: PPO
-  entropy_coef: 0.0
 
+hyperparam:
+  num_mini_batches: 4
+  num_learning_epochs: 50
+  shuffle: False # True should give better sample efficiency
+  Gamma: 0.995
+  init_beta: 1.0
+  Beta: 0.85
+  beta_scheduler: 0.001
+  use_lr_scheduler: True
+  max_lr: 0.002
+  min_lr: 0.0005 # is the actual learning rate if use_lr_scheduler = False
+  l2_reg_weight: 0.005
+  entropy_weight: 0.0
 
