major changes. PID controller now running in C++, simulation speed enhanced by magnitude of 3

--- a/raisimGym/environments/itm_quadcopter_pid/pid_cfg.yaml
+++ b/raisimGym/environments/itm_quadcopter_pid/pid_cfg.yaml
@@ -2,21 +2,21 @@ seed: 1
 record_video: yes
 
 environment:
-  simulation_dt: 0.0025
+  simulation_dt: 0.002
   control_dt: 0.01
-  max_time: 13.0
+  max_time: 5.0
   render: True
 
-  num_envs: 96
-  vis_every_n: 20
+  num_envs: 32
+  eval_every_n: 20
   visualize_eval: True
   num_threads: 40
 
   reward:
     position:
-      coeff: -0.04
+      coeff: -0.004
     relPosition:
-      coeff: 0.0
+      coeff:
     thrust:
       coeff: 0.0
     orientation:
@@ -27,12 +27,12 @@ environment:
 
 architecture:
   shared_nets: False
-  base_net: [96]
-  policy_net: [96, 64] # if shared_nets: True: first element in list will be skipped. i.e. actor_net will
-  value_net: [96, 64]  # be set with [base_net, policy_net[1]]. For more layers, modify actor_critic.py.
+  base_net: [64]
+  policy_net: [128, 128]
+  value_net: [128, 128]
   activation_fn: nn.LeakyReLU
   deterministic_policy: False # if True: does not converge, because action loss will be used instead of log prob action loss
-                              # False: loss = -logProb
+  # False: loss = -logProb
 
 helper:
   normalize_ob: Flase # might make no sense in this task
@@ -42,17 +42,16 @@ helper:
 
 
 hyperparam:
-  num_mini_batches: 3
-  num_learning_epochs: 20
-  shuffle: True # True should give better sample efficiency
-  gamma: 0.998
-  lam: 0.95
+  num_mini_batches: 2
+  num_learning_epochs: 50
+  shuffle: False # True should give better sample efficiency
+  Gamma: 0.995
   init_beta: 1.0
-  beta_min: 0.3
-  beta_scheduler: 0.005
-  use_lr_scheduler: False
+  Beta: 0.85
+  beta_scheduler: 0.001
+  use_lr_scheduler: True
   max_lr: 0.002
-  min_lr: 0.001 # is the actual learning rate if use_lr_scheduler = False
+  min_lr: 0.0001 # is the actual learning rate if use_lr_scheduler = False
   l2_reg_weight: 0.001
   entropy_weight: 0.0
 
